Диплом второй этап. реализов полностью Event